# unirss-cross

./: .gitignore  Cargo.toml  README.md  build.sh
android-unirss/: Cargo.toml  build.gradle  build.sh  local.properties
android-unirss/app/: build.gradle
android-unirss/app/src/main/: AndroidManifest.xml
android-unirss/app/src/main/java/com/jedugsem/uniquiz/: MainActivity.java
android-unirss/app/src/main/java/com/jedugsem/unirss/: MainActivity.java
android-unirss/src/: java.rs  lib.rs  lib2.rs  scene.rs
unirss/: Cargo.toml
unirss/i18n/de/: unirss.ron
unirss/i18n/en/: unirss.ron
unirss/src/: back.rs  com.rs  favicons.rs  git.rs  lib.rs  localize.rs  main.rs  per.rs  settings.rs
unirss/src/comps/: mod.rs  sidebar.rs
unirss/src/pages/: add_url.rs  artikle_list.rs  feed_list.rs  feed_view.rs  mod.rs
