[workspace]
members = ["unirss"]
default-members = ["unirss"]
resolver = "2"
exclude = ["android-unirss"]

[workspace.package]
version = "0.3.1"
authors = ["Jedug Sem"]
edition = "2021"
repository = "https://gitlab.com/jedugsem/unirss"
readme = "README.md"

[workspace.dependencies]
iced-material = { git = "https://github.com/jedugsem/iced-material" }

# [profile.release]
# strip= true
# lto =true
# opt-level = "z"
# panic="abort"
