[package]
name = "unirss"
version = "0.1.0"
edition = "2021"
default-run="unirss"

[[bin]]
name = "unirss"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
webpage = {version="*",default-features=false}
url = "*"
git2 = {version="0.13.22", features = ["vendored-libgit2","vendored-openssl"]}
mdka = "*"
feed-rs = "*"
webbrowser = "*"
iced-material = {workspace=true}
bincode = {version = "1.3.3"}
ron = "*"
serde = {features = ["derive"],version="*"}
chrono = "*"
sys-locale = "*"
futures ="*"
tokio = "*"
reqwest = {version="*",default-features=false,features=["blocking","rustls-tls"]}

[dependencies.iced]
features = ["wgpu","tokio","image"]
git = "https://github.com/jedugsem/iced"

[dependencies.iced_widget]
features = ["wgpu","markdown","image","highlighter"]
git = "https://github.com/jedugsem/iced"

[dependencies.iced_graphics]
git = "https://github.com/jedugsem/iced"


[dependencies.iced_winit]
git = "https://github.com/jedugsem/iced"

[dependencies.iced_wgpu]
git = "https://github.com/jedugsem/iced"

[dependencies.iced_core]
git = "https://github.com/jedugsem/iced"

